package OOAD_LAB;


public class Entry {
    public static void main(String[] args) {
        Console console = new Console();
        console.getUserCommand();
    }
}
