package OOAD_LAB.command;
public class Command {
    public void execute() {

    }

    public void undo(){

    }

    public void redo() {

    }
}
